# ChangeLog for app-misc/nanorc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*nanorc-9999 (16 May 2009)

  16 May 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  +nanorc-9999.ebuild, +metadata.xml:
  initial checkin
