@@ -1,3 +1,13 @@
-EBUILD nanorc-9999.ebuild 678 RMD160 5957a0d0d245263a2845faa2ab52af505f0b24d9 SHA1 6178405f5afb535f2fd50d7112d62b26a448974d SHA256 40c6e6ec86341610516214bc0b227ff37809856efd54f84524fb16c4cc9973d0
-MISC ChangeLog 258 RMD160 1105302d30c36de9a596f0b46943631526c0b250 SHA1 c352686b7f8c802c52568f3793c73cf9983df4e1 SHA256 f11b40ead697aa91b7f516395331ca60b64a9b8e5e0d4034e817cd553fc674aa
-MISC metadata.xml 360 RMD160 d7d4df2bf3ac34a965a910d1694e038ffec210b7 SHA1 8e6676b11f7752f8c79d9a07aad96f887a25dfcf SHA256 d10f0e802b5c8ffb5407cfdea2960b2a8de3c7861830f46002392b24885efed8
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
+EBUILD nanorc-9999.ebuild 693 RMD160 116795d9ed7e861f960aa675196150f0d21efbfc SHA1 3ebb391f93390019a7aadb748853a8c5c80edbb8 SHA256 5dce983e5ae7fe2a70193446f4021e087e98d3e78ee29d61732f1d02cbbe26a0
+MISC ChangeLog 360 RMD160 354b9b3436e83b86d2c3f469925c7b2c7e0c4758 SHA1 6eb1e023b1c02b8602597193d957786a7323c195 SHA256 7e24ef93465bbef8bdee698e768ee5f10f8fd8732b725c7b87471bb90d9b8742
+MISC metadata.xml 337 RMD160 38751d20a93628591f4ab317ef7feb706258510b SHA1 1c83b3c3f3a7132375d2713d4de834e5b8d4874d SHA256 f2ae19508e9b020fb3c579ad2a1aa7a50148f54c9aff919e8fe0e62d527a8134
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iEYEAREKAAYFAk8MSBgACgkQgAnW8HDreRYDGACff8Ch/BQeT/5cyA7cFQfGa0to
+BFkAn2Q+1rhBia+puixTbL+jQwiPjWe7
+=JWct
+-----END PGP SIGNATURE-----
